# rwd

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.claude/skills/: validate.md
.claude/skills/release/: SKILL.md
.github/: release.yml
.github/scripts/: generate_release_notes.cjs
.github/workflows/: pr-labeler.yml  release-on-main.yml  release.yml
docs/: ARCHITECTURE.md  CONVENTIONS.md  LEARNING_GUIDE.md  MILESTONES.md  RELEASES.md
docs/superpowers/plans/: 2026-03-16-codex-parser.md  2026-03-16-m5-config-system.md  2026-03-17-redactor.md  2026-03-17-update-check-caching.md  2026-03-18-dynamic-max-tokens.md  2026-03-18-rate-limit-aware-analysis.md  2026-03-18-token-limit-fallback.md  2026-03-20-i18n-english-first.md  2026-03-27-codex-resume-session-filtering.md  2026-04-11-multi-root-agent-session-discovery-next-session-prompt.md  2026-04-22-codex-subagent-session-filtering.md
docs/superpowers/specs/: 2026-03-16-summary-and-caching-design.md  2026-03-16-til-improvement-design.md  2026-03-17-redactor-design.md  (+10 more)
prompts/: chunk_summarize_en.md  chunk_summarize_ko.md  slack_en.md  slack_ko.md  summary_en.md  summary_ko.md  system_en.md  system_ko.md
src/: cache.rs  cli.rs  config.rs  doctor.rs  main.rs  messages.rs  update.rs
src/analyzer/: anthropic.rs  client.rs  codex_exec.rs  compaction.rs  insight.rs  mod.rs  openai.rs  planner.rs  prompt.rs  provider.rs  summarizer.rs
src/output/: markdown.rs  mod.rs
src/parser/: claude.rs  codex.rs  mod.rs  roots.rs
src/redactor/: mod.rs  patterns.rs
