[package]
name = "rwd"
version = "0.13.1"
edition = "2024"
description = "CLI tool that analyzes AI coding session logs and extracts daily development insights"
license = "MIT"
repository = "https://github.com/gigagookbob/rwd"
authors = ["gigagookbob"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
rpassword = "7"
dialoguer = "0.11"
console = "0.15"
regex = "1"
notify-rust = "4"
semver = "1.0.27"
